feat(dry-run): add dry-run mode to test without calling webhook
- Add DRY_RUN environment variable to Lambda
- Always log full webhook payload for review
- Skip actual webhook call when dry_run_mode=true
- Add dry_run_mode variable to Terraform
- Update outputs with dry-run instructions and payload query command
- Saves investigation quota during testing and development

--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -9,3 +9,10 @@ webhook_secret = "YOUR_WEBHOOK_SECRET"
 
 # Set to true to automatically add SNS topic to existing alarms
 enable_alarm_updates = false
+
+# Set to true to test without calling DevOps Agent (saves investigation quota)
+# Full payload will be logged to CloudWatch for review
+dry_run_mode = false
+
+# Set to true to enable dry-run mode (logs payloads without calling webhook)
+dry_run_mode = false
