feat(cdk): add CDK Python deployment option as reference pattern
- Add complete CDK Python implementation as alternative to Terraform
- Add deployment context variables (deployment_name, description, priority)
- Generalize webhook payload to remove hardcoded retail-store context
- Add comprehensive documentation (Architecture, Deployment, Customization)
- Test and verify CDK deployment works identically to Terraform
- Support multiple deployment scenarios and alarm types
- Make pattern suitable as AWS customer reference implementation

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@
 !*.tfvars.example
 .terraform.lock.hcl
 
+# CDK
+cdk.out/
+cdk.context.json
+.cdk.staging/
+*.egg-info/
+
 # Python
 __pycache__/
 *.py[cod]
@@ -13,7 +19,9 @@ __pycache__/
 *.so
 .Python
 venv/
+.venv/
 ENV/
+env/
 
 # Lambda package
 lambda.zip
